Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,10 @@ pr:
       - master 
       - release/*
       - dev1
-
+  paths:
+    include:
+      - ops/*
+      
 trigger:
   batch: true
   branches:
