Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,9 @@ pr:
       - master 
       - release/*
       - dev1
-  paths:
-    include:
-      - ops/*
+#  paths:
+#    include:
+#      - ops/*
       
 trigger:
   batch: true
